Fix format for edit link

--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -103,7 +103,7 @@ receivers:
       {{- if eq .Status "firing" -}}
       {{.CommonAnnotations.summary}}
       > {{if .CommonAnnotations.description}}{{.CommonAnnotations.description}}
-      {{- else}}*Please add an alert description!*{{end -}}
+      {{- else}}*Please add an alert description!*{{end}}
       <https://github.com/m-lab/prometheus-support/edit/main/config/federation/prometheus/alerts.yml|(edit...)>
       {{- end }}
       {{ range $key, $value := .CommonLabels }} {{ $key }}=*{{ $value }}*, {{ end }}
