--- a/k8s/prometheus-federation/deployments/bigquery-exporter-3h.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter-3h.yml
@@ -26,6 +26,7 @@ spec:
                 "-gauge-query=/queries/bq_daily_archive.sql",
                 "-gauge-query=/queries/bq_daily_tests.sql",
                 "-gauge-query=/queries/bq_server.sql",
+                "-gauge-query=/queries/bq_billing.sql",
               ]
         ports:
         - containerPort: 9348
