Add distinct pod labels for 3h and 5m configs

--- a/k8s/prometheus-federation/deployments/bigquery-exporter-3h.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter-3h.yml
@@ -6,11 +6,11 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      run: bigquery-exporter
+      run: bigquery-exporter-3h
   template:
     metadata:
       labels:
-        run: bigquery-exporter
+        run: bigquery-exporter-3h
       annotations:
         prometheus.io/scrape: 'true'
     spec:
