--- a/k8s/prometheus-federation/deployments/bigquery-exporter-5m.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter-5m.yml
@@ -6,11 +6,11 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      run: bigquery-exporter
+      run: bigquery-exporter-5m
   template:
     metadata:
       labels:
-        run: bigquery-exporter
+        run: bigquery-exporter-5m
       annotations:
         prometheus.io/scrape: 'true'
     spec:
