--- a/config/federation/bigquery/bq_gardener_historical.sql.template
+++ b/config/federation/bigquery/bq_gardener_historical.sql.template
@@ -51,23 +51,23 @@ WITH all_types AS (
   WHERE date > DATE('2019-01-01')
   UNION ALL
   -- MSAK
-  SELECT "raw_msak.tcpinfo" AS experiment, "tcpinfo" AS datatype, id, date, parser.Time as parseTime,
+  SELECT "msak" AS experiment, "tcpinfo" AS datatype, id, date, parser.Time as parseTime,
   FROM `{{PROJECT}}.raw_msak.tcpinfo`
   WHERE date > DATE('2023-01-01')
   UNION ALL
-  SELECT "raw_msak.pcap" AS experiment, "pcap" AS datatype, id, date, parser.Time as parseTime,
+  SELECT "msak" AS experiment, "pcap" AS datatype, id, date, parser.Time as parseTime,
   FROM `{{PROJECT}}.raw_msak.pcap`
   WHERE date > DATE('2023-01-01')
   UNION ALL
-  SELECT "raw_msak.scamper1" AS experiment, "scamper1" AS datatype, id, date, parser.Time as parseTime,
+  SELECT "msak" AS experiment, "scamper1" AS datatype, id, date, parser.Time as parseTime,
   FROM `{{PROJECT}}.raw_msak.scamper1`
   WHERE date > DATE('2023-01-01')
   UNION ALL
-  SELECT "raw_msak.annotation2" AS experiment, "annotation2" AS datatype, id, date, parser.Time as parseTime,
+  SELECT "msak" AS experiment, "annotation2" AS datatype, id, date, parser.Time as parseTime,
   FROM `{{PROJECT}}.raw_msak.annotation2`
   WHERE date > DATE('2023-01-01')
   UNION ALL
-  SELECT "raw_msak.hopannotation2" AS experiment, "hopannotation2" AS datatype, id, date, parser.Time as parseTime,
+  SELECT "msak" AS experiment, "hopannotation2" AS datatype, id, date, parser.Time as parseTime,
   FROM `{{PROJECT}}.raw_msak.hopannotation2`
   WHERE date > DATE('2023-01-01')
 ),
