--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -771,6 +771,20 @@ groups:
         be overloaded, or TCP pacing may be misconfigured on the node.
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/SuqnZ6Hiz/ops-switch-overview
 
+# Metrics needed for NDT S2C alert are missing.
+  - alert: DataQuality_TooManyNdtS2cTestsWithDiscards_MetricsMissing
+    expr: absent(bq_ndt_s2c_with_discards) OR absent(bq_ndt_s2c_total)
+    for: 30m
+    labels:
+      repo: ops-tracker
+      severity: ticket
+      cluster: prometheus-federation
+    annotations:
+      summary: The metrics needed to calculate NDT discard rates are missing.
+      description: Metrics are missing from the BigQuery Exporter. Check the
+        prometheus-federation cluster and bigquery-exporter configurations for errors
+        or recent changes.
+
 # The node_exporter running on eb.measurementlab.net is down.
   - alert: NodeExporterOnEbDownOrMissing
     expr: |
