--- a/k8s/prometheus-federation/deployments/grafana.yml
+++ b/k8s/prometheus-federation/deployments/grafana.yml
@@ -36,14 +36,14 @@ spec:
         env:
         - name: GF_PATHS_PROVISIONING
           value: "/etc/provisioning"
-          # This semicolon-separated list of plugins will be installed on
+          # This comma-separated list of plugins will be installed on
           # server startup.
           #
           # Note: The "doitintl" BQ plugin is unmantained and deprecated in
           # favor of the official one maintained by Grafana. Some dashboards
           # still use datasources created with this plugin.
         - name: GF_INSTALL_PLUGINS
-          value: "doitintl-bigquery-datasource;grafana-bigquery-datasource"
+          value: "doitintl-bigquery-datasource,grafana-bigquery-datasource"
         - name: GF_SECURITY_ADMIN_PASSWORD
           valueFrom:
             secretKeyRef:
