Update defaultProject for mlab-oti bq ds

--- a/config/federation/grafana/provisioning/datasources/grafana_bigquery_mlab-oti.yml.template
+++ b/config/federation/grafana/provisioning/datasources/grafana_bigquery_mlab-oti.yml.template
@@ -1,7 +1,7 @@
 apiVersion: 1
 
 datasources:
-  - name: Google BigQuery (mlab-staging)
+  - name: Google BigQuery (mlab-oti)
     type: grafana-bigquery-datasource
     access: proxy
     isDefault: {{IS_DEFAULT}}
@@ -9,4 +9,4 @@ datasources:
     enabled: true
     jsonData:
       authenticationType: gce
-      defaultProject: mlab-staging
+      defaultProject: mlab-oti
