--- a/k8s/data-pipeline/deployments/kube-state-metrics.yml
+++ b/k8s/data-pipeline/deployments/kube-state-metrics.yml
@@ -18,6 +18,6 @@ spec:
         prometheus-node: 'true'
       containers:
       - name: kube-state-metrics
-        image: k8s.gcr.io/kube-state-metrics/kube-state-metrics:v2.2.4
+        image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.9.2
         ports:
         - containerPort: 8080
