--- a/k8s/data-pipeline/services/prometheus.yml
+++ b/k8s/data-pipeline/services/prometheus.yml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: prometheus-public-service
+  name: prometheus-service
   namespace: default
-  annotations:
-    gke-prometheus-federation/scrape: 'true'
 spec:
   ports:
   - port: 9090
     protocol: TCP
     targetPort: 9090
   selector:
+    # Pods with labels matching this key/value pair will be publically
+    # accessible through the service IP and port.
     run: prometheus-server
   sessionAffinity: None
-  type: LoadBalancer
+  type: ClusterIP
