--- a/config/federation/grafana/provisioning/datasources/data-pipeline_mlab-sandbox.yml.template
+++ b/config/federation/grafana/provisioning/datasources/data-pipeline_mlab-sandbox.yml.template
@@ -1,24 +1,20 @@
 # config file version
 apiVersion: 1
 
-# list of datasources to insert/update depending
-# what's available in the database
 datasources:
-  # <string, required> name of the datasource. Required
 - name: Data Pipeline (mlab-sandbox)
-  # <string, required> datasource type. Required
   type: prometheus
-  # <string, required> access mode. proxy or direct (Server or Browser in the UI). Required
   access: proxy
-  # <int> org id. will default to orgId 1 if not specified
   orgId: 1
-  # <string> url
-  url: http://prometheus-data-pipeline.mlab-sandbox.measurementlab.net:9090
-  # <bool> mark as default datasource. Max one per org
+  url: https://prometheus-data-pipeline-basic.mlab-sandbox.measurementlab.net
+  basicAuth: true
+  basicAuthUser: {{PROM_AUTH_USER}}
+  secureJsonData:
+    basicAuthPassword: {{PROM_AUTH_PASS}}
   isDefault: {{IS_DEFAULT}}
   version: 1
-  # <bool> allow users to edit datasources from the UI.
   editable: false
 
   jsonData:
+    timeout: 60
     timeInterval: 60s
