Install a ploty plugin
Uses nline-plotlyjs-panel instead of ae3e-ploty-planel because the
latter does not seem to work with newer versions of Grafana.

--- a/k8s/prometheus-federation/deployments/grafana.yml
+++ b/k8s/prometheus-federation/deployments/grafana.yml
@@ -43,7 +43,7 @@ spec:
           # favor of the official one maintained by Grafana. Some dashboards
           # still use datasources created with this plugin.
         - name: GF_INSTALL_PLUGINS
-          value: "doitintl-bigquery-datasource,grafana-bigquery-datasource"
+          value: "doitintl-bigquery-datasource,grafana-bigquery-datasource,nline-plotlyjs-panel"
         - name: GF_SECURITY_ADMIN_PASSWORD
           valueFrom:
             secretKeyRef:
