--- a/k8s/prometheus-federation/deployments/grafana.yml
+++ b/k8s/prometheus-federation/deployments/grafana.yml
@@ -38,12 +38,8 @@ spec:
           value: "/etc/provisioning"
           # This comma-separated list of plugins will be installed on
           # server startup.
-          #
-          # Note: The "doitintl" BQ plugin is unmantained and deprecated in
-          # favor of the official one maintained by Grafana. Some dashboards
-          # still use datasources created with this plugin.
         - name: GF_INSTALL_PLUGINS
-          value: "doitintl-bigquery-datasource,grafana-bigquery-datasource,nline-plotlyjs-panel"
+          value: "grafana-bigquery-datasource,ae3e-plotly-panel"
         - name: GF_SECURITY_ADMIN_PASSWORD
           valueFrom:
             secretKeyRef:
