Update limit for GardenerFailureRateTooHighOrMissing

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -879,9 +879,8 @@ groups:
 # GardenerFailureRateTooHigh fires when the number of failed Gardener jobs
 # in the last day rises above 1%.
   - alert: GardenerFailureRateTooHighOrMissing
-    expr: (sum(rate(gardener_jobs_total{status!="success"}[1d])) by (experiment, datatype) /
-      sum(rate(gardener_jobs_total[1d])) by (experiment, datatype)) > 0.01
-    for: 10m
+    expr: (sum(increase(gardener_jobs_total{status!="success"}[1d])) by (experiment, datatype) > 3
+    for: 24h
     labels:
       repo: dev-tracker
       severity: ticket
