Removes all usage of "ndt.iupui" and "neubot.mlab"

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -259,10 +259,10 @@ groups:
             label_replace(((node_filesystem_size_bytes{cluster="platform", mountpoint="/cache/data"} -
               node_filesystem_avail_bytes{cluster="platform", mountpoint="/cache/data"}) /
                 node_filesystem_size_bytes{cluster="platform", mountpoint="/cache/data"}),
-                "experiment", "ndt.iupui", "", "") < bool 0.95 OR
+                "experiment", "ndt", "", "") < bool 0.95 OR
             label_replace(kube_node_spec_taint{cluster="platform", key="lame-duck"},
-              "experiment", "ndt.iupui", "", "") != bool 1 OR
-            label_replace(gmx_machine_maintenance, "experiment", "ndt.iupui", "", "") != bool 1
+              "experiment", "ndt", "", "") != bool 1 OR
+            label_replace(gmx_machine_maintenance, "experiment", "ndt", "", "") != bool 1
           )
         ) /
         count(
@@ -291,10 +291,10 @@ groups:
             label_replace(((node_filesystem_size_bytes{cluster="platform", mountpoint="/cache/data"} -
               node_filesystem_avail_bytes{cluster="platform", mountpoint="/cache/data"}) /
                 node_filesystem_size_bytes{cluster="platform", mountpoint="/cache/data"}),
-                "experiment", "ndt.iupui", "", "") < bool 0.95 OR
+                "experiment", "ndt", "", "") < bool 0.95 OR
             label_replace(kube_node_spec_taint{cluster="platform", key="lame-duck"},
-              "experiment", "ndt.iupui", "", "") != bool 1 OR
-            label_replace(gmx_machine_maintenance, "experiment", "ndt.iupui", "", "") != bool 1
+              "experiment", "ndt", "", "") != bool 1 OR
+            label_replace(gmx_machine_maintenance, "experiment", "ndt", "", "") != bool 1
           )
         ) /
         count(
@@ -323,10 +323,10 @@ groups:
             label_replace(((node_filesystem_size_bytes{cluster="platform", mountpoint="/cache/data"} -
               node_filesystem_avail_bytes{cluster="platform", mountpoint="/cache/data"}) /
                 node_filesystem_size_bytes{cluster="platform", mountpoint="/cache/data"}),
-                "experiment", "ndt.iupui", "", "") < bool 0.95 OR
+                "experiment", "ndt", "", "") < bool 0.95 OR
             label_replace(kube_node_spec_taint{cluster="platform", key="lame-duck"},
-              "experiment", "ndt.iupui", "", "") != bool 1 OR
-            label_replace(gmx_machine_maintenance, "experiment", "ndt.iupui", "", "") != bool 1
+              "experiment", "ndt", "", "") != bool 1 OR
+            label_replace(gmx_machine_maintenance, "experiment", "ndt", "", "") != bool 1
           )
         ) /
         count(
@@ -356,10 +356,10 @@ groups:
             label_replace(((node_filesystem_size_bytes{cluster="platform", mountpoint="/cache/data"} -
               node_filesystem_avail_bytes{cluster="platform", mountpoint="/cache/data"}) /
                 node_filesystem_size_bytes{cluster="platform", mountpoint="/cache/data"}),
-                "experiment", "ndt.iupui", "", "") < bool 0.95 OR
+                "experiment", "ndt", "", "") < bool 0.95 OR
             label_replace(kube_node_spec_taint{cluster="platform", key="lame-duck"},
-              "experiment", "ndt.iupui", "", "") != bool 1 OR
-            label_replace(gmx_machine_maintenance, "experiment", "ndt.iupui", "", "") != bool 1
+              "experiment", "ndt", "", "") != bool 1 OR
+            label_replace(gmx_machine_maintenance, "experiment", "ndt", "", "") != bool 1
           )
         ) /
         count(
@@ -387,11 +387,11 @@ groups:
             label_replace(((node_filesystem_size_bytes{cluster="platform", mountpoint="/cache/data"} -
               node_filesystem_avail_bytes{cluster="platform", mountpoint="/cache/data"}) /
                 node_filesystem_size_bytes{cluster="platform", mountpoint="/cache/data"}),
-                "experiment", "ndt.iupui", "", "") < bool 0.95 OR
+                "experiment", "ndt", "", "") < bool 0.95 OR
             label_replace(kube_node_spec_taint{cluster="platform", key="lame-duck"},
-              "experiment", "ndt.iupui", "", "") != bool 1 OR
+              "experiment", "ndt", "", "") != bool 1 OR
             lame_duck_experiment{cluster="platform"} != bool 1 OR
-            label_replace(gmx_machine_maintenance, "experiment", "ndt.iupui", "", "") != bool 1
+            label_replace(gmx_machine_maintenance, "experiment", "ndt", "", "") != bool 1
         )
         ) /
         count(
@@ -419,11 +419,11 @@ groups:
             label_replace(((node_filesystem_size_bytes{cluster="platform", mountpoint="/cache/data"} -
               node_filesystem_avail_bytes{cluster="platform", mountpoint="/cache/data"}) /
                 node_filesystem_size_bytes{cluster="platform", mountpoint="/cache/data"}),
-                "experiment", "ndt.iupui", "", "") < bool 0.95 OR
+                "experiment", "ndt", "", "") < bool 0.95 OR
             label_replace(kube_node_spec_taint{cluster="platform", key="lame-duck"},
-              "experiment", "ndt.iupui", "", "") != bool 1 OR
+              "experiment", "ndt", "", "") != bool 1 OR
             lame_duck_experiment{cluster="platform"} != bool 1 OR
-            label_replace(gmx_machine_maintenance, "experiment", "ndt.iupui", "", "") != bool 1
+            label_replace(gmx_machine_maintenance, "experiment", "ndt", "", "") != bool 1
         )
         ) /
         count(
@@ -450,8 +450,8 @@ groups:
             probe_success{service="neubot"} OR
             probe_success{service="neubot_tls"} OR
             label_replace(kube_node_spec_taint{cluster="platform", key="lame-duck"},
-              "experiment", "neubot.mlab", "", "") != bool 1 OR
-            label_replace(gmx_machine_maintenance, "experiment", "neubot.mlab", "", "") != bool 1
+              "experiment", "neubot", "", "") != bool 1 OR
+            label_replace(gmx_machine_maintenance, "experiment", "neubot", "", "") != bool 1
           )
         ) /
         count(
@@ -478,8 +478,8 @@ groups:
             probe_success{service="neubot_ipv6"} OR
             probe_success{service="neubot_tls_ipv6"} OR
             label_replace(kube_node_spec_taint{cluster="platform", key="lame-duck"},
-              "experiment", "neubot.mlab", "", "") != bool 1 OR
-            label_replace(gmx_machine_maintenance, "experiment", "neubot.mlab", "", "") != bool 1
+              "experiment", "neubot", "", "") != bool 1 OR
+            label_replace(gmx_machine_maintenance, "experiment", "neubot", "", "") != bool 1
           )
         ) /
         count(
