--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -335,11 +335,12 @@ scrape_configs:
       # consistency with our legacy way of doing things.
       #
       # TODO: In the future we may drop the 'experiment' label altogether in
-      # favor of some native k8s one (e.g., 'deployment').
+      # favor of some native k8s one (e.g., 'deployment'), or to at the very
+      # least shorten the name to just 'ndt'
       - source_labels: [deployment]
         regex: ndt.*
         target_label: experiment
-        replacement: ndt
+        replacement: ndt.iupui
 
       # Rewrite the machine label to make it easier to join these metrics with
       # existing metrics that use machine instead of the node label.
@@ -679,9 +680,11 @@ scrape_configs:
         replacement: ${1}
 
       # Create an "fqdn" label for each target host, which will vary depending
-      # on the service.
+      # on the service. TODO(kinkade): once the ".iupui" suffix is entirely
+      # retired from the platform, modify the regexp to simply use the entire
+      # experiment label's value.
       - source_labels: [__address__, experiment]
-        regex: (.*);(.*)
+        regex: (.*);([a-z0-9]+)\.?.*
         target_label: fqdn
         replacement: ${2}-${1}
 
