--- a/k8s/prometheus-federation/deployments/grafana.yml
+++ b/k8s/prometheus-federation/deployments/grafana.yml
@@ -39,7 +39,7 @@ spec:
           # This comma-separated list of plugins will be installed on
           # server startup.
         - name: GF_INSTALL_PLUGINS
-          value: "grafana-bigquery-datasource,ae3e-plotly-panel,grafana-worldmap-panel"
+          value: "grafana-bigquery-datasource,ae3e-plotly-panel,grafana-worldmap-panel,googlecloud-logging-datasource"
         - name: GF_SECURITY_ADMIN_PASSWORD
           valueFrom:
             secretKeyRef:
