Make Locate_TooManyErrors a pageable alert

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -590,7 +590,7 @@ groups:
     for: 2m
     labels:
       repo: dev-tracker
-      severity: ticket
+      severity: page
       cluster: prometheus-federation
     annotations:
       summary: The rate of Locate V2 nearest request errors is greater than 0.1%.
