--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -590,8 +590,9 @@ groups:
     for: 2m
     labels:
       repo: dev-tracker
-      severity: ticket
+      severity: page
       cluster: prometheus-federation
+      page_project: mlab-oti
     annotations:
       summary: The rate of Locate V2 nearest request errors is greater than 0.1%.
       description: https://github.com/m-lab/ops-tracker/wiki/Alerts-&-Troubleshooting#locate_toomanyerrors
